# PIAIC-Q2-Notes-Wajahat-Hussain

./: README.md
Class 01 Q2 Batch 61/: README.md
Class 03 Q2 Batch  61/: PIAIC_Class_03_Q2_B61.ipynb  README.md
Class 04 Q2 Batch 61/: Hello_World_Langchain.ipynb  README.md
Class 05 Q2 Batch 61/: README.md
Class 06/: Function_calling_config.ipynb  README.md
Class 07 Q2 Batch 61/: Class_07.ipynb  README.md
Class 13 Batch 61 Q2/: README.md
Class 13 Batch 61 Q2/project-flow01/: crewai_flow.html  fun_fact.md  pyproject.toml
Class 13 Batch 61 Q2/project-flow01/src/project_flow01/: hello.py  prompt_chaining.py  simple_flow.py
